--- a/iOS/SundayFriends/es.lproj/Admin.strings
+++ b/iOS/SundayFriends/es.lproj/Admin.strings
@@ -1,21 +1,21 @@
 
 /* Class = "UINavigationItem"; title = "Home"; ObjectID = "0Hd-ut-Jnv"; */
-"0Hd-ut-Jnv.title" = "Trang Chủ";
+"0Hd-ut-Jnv.title" = "Inicio";
 
 /* Class = "UILabel"; text = "View All users"; ObjectID = "4e4-M3-8Gm"; */
-"4e4-M3-8Gm.text" = "xem tất cả \nngười dùng";
+"4e4-M3-8Gm.text" = "Ver todos los \nusuarios";
 
 /* Class = "UILabel"; text = "Withdraw/Deposit"; ObjectID = "5KV-M4-G3L"; */
-"5KV-M4-G3L.text" = "Withdraw/Deposit";
+"5KV-M4-G3L.text" = "Retiro/depósito";
 
 /* Class = "UIButton"; normalTitle = " Admin"; ObjectID = "7zR-2C-qQb"; */
-"7zR-2C-qQb.normalTitle" = " quản trị viên";
+"7zR-2C-qQb.normalTitle" = " Administración";
 
 /* Class = "UITabBarItem"; title = "Members"; ObjectID = "82l-ce-sQj"; */
 "82l-ce-sQj.title" = "Members";
 
 /* Class = "UISearchBar"; placeholder = "Search by Email"; ObjectID = "8Ql-Ez-EH2"; */
-"8Ql-Ez-EH2.placeholder" = "Tìm bằng e-mail";
+"8Ql-Ez-EH2.placeholder" = "Buscar por correo electrónico";
 
 /* Class = "UISearchBar"; 8Ql-Ez-EH2.scopeButtonTitles[0] = "Title"; ObjectID = "8Ql-Ez-EH2"; */
 "8Ql-Ez-EH2.scopeButtonTitles[0]" = "Title";
@@ -24,19 +24,19 @@
 "8Ql-Ez-EH2.scopeButtonTitles[1]" = "Title";
 
 /* Class = "UILabel"; text = "Link Family"; ObjectID = "9NX-3b-dhw"; */
-"9NX-3b-dhw.text" = "Liên kết gia đình";
+"9NX-3b-dhw.text" = "Vincular familia";
 
 /* Class = "UIButton"; normalTitle = "Deposit"; ObjectID = "DMW-xd-lsr"; */
-"DMW-xd-lsr.normalTitle" = "Gửi tiền";
+"DMW-xd-lsr.normalTitle" = "Depósito";
 
 /* Class = "UILabel"; text = "Activate or\nDeactivate user"; ObjectID = "IlR-tw-Hxy"; */
-"IlR-tw-Hxy.text" = "Kích hoạt hoặc hủy \nkích hoạt người dùng";
+"IlR-tw-Hxy.text" = "Activar o \ndesactivar usuario";
 
 /* Class = "UITabBarItem"; title = "More"; ObjectID = "KJL-eN-49w"; */
-"KJL-eN-49w.title" = "Xem thêm";
+"KJL-eN-49w.title" = "Más";
 
 /* Class = "UISearchBar"; placeholder = "Search by Email"; ObjectID = "KpU-CO-BeE"; */
-"KpU-CO-BeE.placeholder" = "Tìm bằng e-mail";
+"KpU-CO-BeE.placeholder" = "Buscar por correo electrónico";
 
 /* Class = "UISearchBar"; KpU-CO-BeE.scopeButtonTitles[0] = "Title"; ObjectID = "KpU-CO-BeE"; */
 "KpU-CO-BeE.scopeButtonTitles[0]" = "Title";
@@ -45,13 +45,13 @@
 "KpU-CO-BeE.scopeButtonTitles[1]" = "Title";
 
 /* Class = "UIButton"; normalTitle = "Withdraw"; ObjectID = "S5x-uD-UzW"; */
-"S5x-uD-UzW.normalTitle" = "Rút tiền";
+"S5x-uD-UzW.normalTitle" = "Retiro";
 
 /* Class = "UINavigationItem"; title = "More"; ObjectID = "Tre-7p-HuD"; */
-"Tre-7p-HuD.title" = "Xem thêm";
+"Tre-7p-HuD.title" = "Más";
 
 /* Class = "UIButton"; normalTitle = "Search"; ObjectID = "VLg-aU-lpY"; */
-"VLg-aU-lpY.normalTitle" = "Search";
+"VLg-aU-lpY.normalTitle" = "Buscar";
 
 /* Class = "UIBarButtonItem"; title = "Item"; ObjectID = "X9W-J1-H91"; */
 "X9W-J1-H91.title" = "Item";
@@ -60,25 +60,25 @@
 "YAY-bZ-VMr.text" = "Member Name";
 
 /* Class = "UILabel"; text = "Admin Panel"; ObjectID = "Zua-Lf-RZT"; */
-"Zua-Lf-RZT.text" = "Bảng quản trị";
+"Zua-Lf-RZT.text" = "Panel de administración";
 
 /* Class = "UITabBarItem"; title = "Home"; ObjectID = "e8H-fU-XZw"; */
-"e8H-fU-XZw.title" = "Trang Chủ";
+"e8H-fU-XZw.title" = "Home";
 
 /* Class = "UILabel"; text = "Title"; ObjectID = "ffv-sx-v2C"; */
 "ffv-sx-v2C.text" = "Title";
 
 /* Class = "UIButton"; normalTitle = "Sign out"; ObjectID = "g4Y-in-kio"; */
-"g4Y-in-kio.normalTitle" = "Đăng xuất";
+"g4Y-in-kio.normalTitle" = "Cerrar la sesión";
 
 /* Class = "UILabel"; text = "Subtitle"; ObjectID = "iu1-im-Cjj"; */
 "iu1-im-Cjj.text" = "Subtitle";
 
 /* Class = "UIButton"; normalTitle = "Search"; ObjectID = "j3I-ao-bbs"; */
-"j3I-ao-bbs.normalTitle" = "Search";
+"j3I-ao-bbs.normalTitle" = "Buscar";
 
 /* Class = "UIButton"; normalTitle = "Edit Profile"; ObjectID = "l1h-L9-wk9"; */
-"l1h-L9-wk9.normalTitle" = "Chỉnh sửa hồ sơ";
+"l1h-L9-wk9.normalTitle" = "Editar perfil";
 
 /* Class = "UILabel"; text = "0"; ObjectID = "pLF-9q-Fpu"; */
 "pLF-9q-Fpu.text" = "0";
@@ -90,4 +90,4 @@
 "vuL-Zj-AzB.text" = "member@gmail.com";
 
 /* Class = "UILabel"; text = "    Please select a user below:"; ObjectID = "w7E-Js-aPZ"; */
-"w7E-Js-aPZ.text" = "    Vui lòng chọn một người dùng sau đây";
+"w7E-Js-aPZ.text" = "    Por favor, elija un usuario a continuación";
